# wlgblock

./: .gitignore  LICENSE  README.md  crlock.patch  flake.nix  meson.build
src/: gbcc.c  gbcc.h  window.c  window.h
src/wayland/: main.c
